# graph_ml

./: main.py  pyproject.toml
src/graph_ml/: __init__.py  model.py  ogb_wrapper.py  trainer.py
