[tool.poetry]
name = "graph_ml"
version = "0.1.0"
description = ""
authors = ["Ching-yu Lin"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.11.0"
torch-scatter = "^2.0.9"
torch-sparse = "^0.6.12"
torch-geometric = "^2.0.3"
ogb = "^1.3.3"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
